--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@types/axios": "^0.14.4",
     "antd": "^5.22.6",
+    "axios": "^1.7.9",
     "next": "15.1.2",
     "next-plugin-antd-less": "^1.8.0",
     "react": "^19.0.0",
