Amplify deploy test

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,8 @@ frontend:
   phases:
     preBuild:
       commands:
+        - nvm install 18
+        - nvm use 18
         - npm ci --cache .npm --prefer-offline
         - echo "Node version: $(node -v)"
         - echo "NPM version: $(npm -v)"
