--- a/amplify.yml
+++ b/amplify.yml
@@ -3,27 +3,23 @@ frontend:
   phases:
     preBuild:
       commands:
-        - nvm install 18
-        - nvm use 18
-        - npm ci --cache .npm --prefer-offline
-        - echo "Node version: $(node -v)"
-        - echo "NPM version: $(npm -v)"
+        - "npm ci --cache .npm --prefer-offline"
+        - 'echo "Node version: $(node -v)"'
+        - 'echo "NPM version: $(npm -v)"'
     build:
       commands:
-        - echo "Starting build process..."
-        - npm run build --verbose
-        - echo "Build completed"
+        - 'echo "Starting build process..."'
+        - "npm run build --verbose"
+        - 'echo "Build completed"'
   artifacts:
     baseDirectory: .next
     files:
       - "**/*"
-    # 添加下面这一行，确保包含静态资源
     discard-paths: false
   cache:
     paths:
       - .next/cache/**/*
       - .npm/**/*
-  # 添加自定义处理程序对 Next.js SSR 的支持
   customHeaders:
     - pattern: "**/*"
       headers:
