--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,7 @@ frontend:
     build:
       commands:
         - 'echo "Starting build process..."'
-        - "npm run build --verbose"
+        - "NEXT_PUBLIC_ESLINT_DISABLED=true npm run build --verbose"
         - 'echo "Build completed"'
   artifacts:
     baseDirectory: .next
