--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ out/
 # 忽略所有环境变量文件，只保留 .env.example 作为模板
 .env
 .env.local
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
