Amplify setting fix

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ out/
 .env.test.local
 .env.production.local
 .env.*.local
+.env.example
 
 # 允许提交 .env.example 作为模板
 !.env.example
@@ -85,7 +86,6 @@ lerna-debug.log*
 *~
 
 # Emacs
-*~
 \#*\#
 /.emacs.desktop
 /.emacs.desktop.lock
@@ -131,7 +131,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # Linux
-*~
 .fuse_hidden*
 .directory
 .Trash-*
@@ -181,3 +180,6 @@ secrets/
 *.seed
 *.pid.lock
 .pnpm-store/
+!/.env.local
+!/.env.production
+!/.env.example
